Attempting to correct items not aligning properly in equip listing

--- a/src/components/ItemListing/index.css
+++ b/src/components/ItemListing/index.css
@@ -84,6 +84,8 @@
   height: 32px;
   min-width: 32px;
   min-height: 32px;
+  max-width: 32px;
+  max-height: 32px;
   overflow: hidden;
 }
 
